--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,9 +11,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivityFragment">
 
-    <TextView
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_height="match_parent"
+        android:id="@+id/listview_aktienliste" />
 
 </FrameLayout>
